apps/production/headlamp/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headlamp-basic-auth
  namespace: headlamp
spec:
  basicAuth:
    secret: headlamp-basic-auth
