apps/production/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-http
  namespace: headlamp
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`headlamp.turtleware.au`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: headlamp
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: headlamp
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.turtleware.au`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
  tls:
    secretName: headlamp-tls
